feat: adding features
