# src/main/java/school/hei/haapi/endpoint/rest/controller/EventController.java
@@ -3,6 +3,7 @@ package school.hei.haapi.endpoint.rest.controller;
 
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.*;
+//import school.hei.haapi.endpoint.rest.mapper.EventMapper;
 import school.hei.haapi.endpoint.rest.mapper.EventMapper;
 import school.hei.haapi.endpoint.rest.model.Event;
 import school.hei.haapi.service.EventService;
@@ -18,7 +19,7 @@ public class EventController {
     private EventMapper eventMapper ;
 
     @GetMapping("/events")
-    public List<Event> getAllEvent (@RequestParam int page , @RequestParam int pageSize){
+    public List<Event> getAllEvents (@RequestParam int page , @RequestParam int pageSize){
         return eventService.getAllEvents(page , pageSize).stream()
                 .map(eventMapper::toRest)
                 .collect(Collectors.toUnmodifiableList());
@@ -30,7 +31,15 @@ public class EventController {
     }
 
     @PutMapping("/events")
-    public Event createOrUpadteEvent(@RequestBody Event event){
-        return eventMapper.toRest(eventService.createOrUpdateEvent(eventMapper.toDomain(event))) ;
+    public List<Event> createOrUpadteEvent(@RequestBody List<Event> events){
+        var saved = events.stream().map(eventMapper::toDomain).collect(Collectors.toUnmodifiableList());
+        return eventService.createOrUpdateEvent(saved).stream().map(eventMapper::toRest).collect(Collectors.toUnmodifiableList());
     }
+
+    @DeleteMapping("/events/{id_event}")
+    public String deleteEventByID(String id_event){
+        return eventService.deleteById(id_event) ;
+    }
+
+
 }
